- Add configuration option for second UPS system.
- Add configuration option for tls_certcheck.
- Add mounting (read-only) support for EXT4 drives.
- UPS monitoring username & password can be set/changed.
- Update installer now full gpt supported.
- Refactoring Webgui parts and replace deprecated php code.
- sshd Challenge-Response Authentication is now configurable.
- Rewrite of zpool tools.
- Upgrade exfat to 1.2.3.
- Upgrade phpvirtualbox to 5.0-5.
- Upgrade tmux to 2.2.
- Upgrade fusefs-ntfs to 2016.2.22.
- Upgrade smartmontools to 6.5.
- Upgrade msmtp to 1.6.5.
- Upgrade iperf3 to 3.1.3.
- Upgrade bash 4.3 to p46.
- Upgrade gzip to 1.8.
- Upgrade unison to 2.48.4.
- Upgrade sudo to 1.8.17p1.
- Upgrade mDNSResponder to 625.41.2.
- Upgrade dialog to 1.3-20160424.
- Upgrade noVNC to 0.6.1.
- Upgrade zoneinfo to 2016f.
- Upgrade samba to 4.3.11.
- Upgrade jQuery to 3.1.0.
- Upgrade lighttpd to 1.4.41.
- Upgrade arcconf to 1_8_21375.
- Upgrade libvncserver to 0.9.10.
- Upgrade inadyn-mt to 02.28.07.
- Upgrade nano to 2.7.0.
- Upgrade syncthing to 0.14.6.
- Upgrade e2fsprogs to 1.43.3.
- Upgrade virtualbox-ose to 5.1.6.
- Upgrade netatalk to 3.1.10.
- Upgrade php to 7.0.11.

Fixes:
- Fix prevent deletion of mounted gconcat softraid.
- Fix broken shadow copy.
- Fix for rsync over ssh (without deamon).
- Fix dataset did not always get destroyed on webgui if a share is in usage.
- Fix missing mimes (translation files) for File Manager (translating needed).
- Fix firewall rules cannot be moved into the preset rule area.
- Fix disable fw button not working under certain conditions.
- Fix importing ZFS datasets and ZFS volumes from different ZFS pools.
- Fix code format for Swedish file manager.
- Fix gettext protection against html code injections.
- Fix issue when reformatting disks.
- Fix a problem with gpt/labels.
- Fix Some HGST drive temperatures are not displayed.
- Fix download log files did not always work with some browsers.